--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -6,13 +6,12 @@
 
     <depends>com.intellij.modules.platform</depends>
 
-    <resource-bundle>messages.MyBundle</resource-bundle>
-
     <extensions defaultExtensionNs="com.intellij">
-        <toolWindow factoryClass="com.github.nokopi36.customprogressbar.toolWindow.MyToolWindowFactory" id="MyToolWindow"/>
+
     </extensions>
 
     <applicationListeners>
-        <listener class="com.github.nokopi36.customprogressbar.listeners.MyApplicationActivationListener" topic="com.intellij.openapi.application.ApplicationActivationListener"/>
+        <listener class="com.github.nokopi36.customprogressbar.ApplicationComponent" topic="com.intellij.ide.ui.LafManagerListener"/>
+        <listener class="com.github.nokopi36.customprogressbar.ApplicationComponent" topic="com.intellij.openapi.application.ApplicationActivationListener"/>
     </applicationListeners>
 </idea-plugin>
